apps_old/external_secrets/stores/bitwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-cli
  namespace: external-secrets
  labels:
    app.kubernetes.io/instance: bitwarden-cli
    app.kubernetes.io/name: bitwarden-cli
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8087
    targetPort: 8087
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: bitwarden-cli
    app.kubernetes.io/instance: bitwarden-cli
