apps_old/external_secrets/stores/bitwarden/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-eso-to-bw-cli
  namespace: external-secrets
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: bitwarden-cli
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: external-secrets
